--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -73,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Snehal Vilas Rode</h1>
-      <p>I'm a <span class="typed" data-typed-items="Full Stack Engineer, Blockchain Engineer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Full Stack Engineer, Blockchain Engineer, Data Science Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -93,22 +91,18 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Full Stack Blockchain Developer.</h3>
-            <p class="fst-italic">
-              As an experienced full-stack developer, I possess the rare ability to handle complex code and work efficiently, allowing me to build web and mobile applications from scratch. My passion lies in writing clean, scalable, and robust code that is easy to read, maintain, and results in high-quality software. I believe that clean code is essential for avoiding bugs, easing maintenance, and facilitating error handling. I am committed to following industry best practices and strive to continuously learn new technologies and techniques to keep up-to-date with the latest trends, including AI.            </p>
+            <h3>Full Stack & Blockchain & Data Science Engineer</h3>
+            <p class="fst-italic pt-4">
+              As an experienced full-stack developer, I possess the rare ability to handle complex code and work efficiently, allowing me to build web and mobile applications from scratch. My passion lies in writing clean, scalable, and robust code that is easy to read, maintain, and results in high-quality software. 
+              I believe that clean code is essential for avoiding bugs, easing maintenance, and facilitating error handling. 
+              In addition to my full-stack development skills, I also have experience in data science. My experience in data science allows me to develop web and mobile applications with advanced data analysis and visualization features, as well as integrate machine learning capabilities into applications. 
+              I am committed to following industry best practices and strive to continuously learn new technologies and techniques to keep up-to-date with the latest trends, including AI.  
+            </p>
             <div class="row">
               <div class="col-lg-6">
-                <ul>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li> -->
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
+                <ul class="mt-5">
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Snehal Vilas Rode</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li> -->
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -127,48 +121,11 @@
           <h2>Skills</h2>
         </div>
 
+        <h3 class="mb-3" data-aos="fade-up">Web</h3>
+
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">TypeScript <i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">C# <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Solidity<i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
               <span class="skill">React <i class="val">100%</i></span>
@@ -178,18 +135,22 @@
             </div>
 
             <div class="progress">
-              <span class="skill">React Native <i class="val">90%</i></span>
+              <span class="skill">Next.js <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Angular<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Django <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
               <span class="skill">Node.js <i class="val">100%</i></span>
@@ -199,18 +160,93 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Blockchain<i class="val">80%</i></span>
+              <span class="skill">Nest.js <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Express.js <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Django <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
 
         </div>
 
-      </div>
+        <h3 class="mb-3" data-aos="fade-up">Mobile</h3>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="progress">
+              <span class="skill">React Native <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+        <h3 class="mb-3" data-aos="fade-up">Blockchain</h3>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="progress">
+              <span class="skill">Solidity <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+        <h3 class="mb-3" data-aos="fade-up">Data Science</h3>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="progress">
+              <span class="skill">Machine Learning(ML) <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">NLP <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Artificial Intelligence(AI)<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
@@ -238,25 +274,32 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Full Stack Web & Mobile Developer</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>IguVerse, Remote, ( Freelancer ) </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Cooperated with CEO Andrew, QAs, mobile team and backend team.</li>
+                <li>Contributed to build the main web and mobile app development. </li>
+                <li>Fixed several critical mobile issues.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Full Stack Blockchain Developer</h4>
+              <h5>2020 - 2022</h5>
+              <p><em>Luckychip, Remote, ( Freelancer )</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Built the website from scratch with the several developers.</li>
+                <li>Contributed to smart contract development.</li>
+                <li>Reviewed the other developer's PRs strictly and provided the constructive feedback.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Full Stack Developer</h4>
+              <h5>2016 - 2020</h5>
+              <p><em>Seidat, Remote, ( Freelancer )</em></p>
+              <ul>
+                <li>Worked with CTO directly to implement the several new features like meeting notes.</li>
+                <li>Cooperated with the sales team to build a user-friendly website.</li>
               </ul>
             </div>
           </div>
@@ -286,16 +329,6 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-mobile filter-blockchain">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IguVerse - https://iguverse.com"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-iguverse-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
@@ -312,6 +345,16 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LuckyChip - https://luckychip.io"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-luckychip-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-mobile filter-blockchain">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IguVerse - https://iguverse.com"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-iguverse-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -343,7 +386,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>snehalrode99@gmail.com</p>
+                <p>thefullstackmasters@gmail.com</p>
               </div>
 
               <div class="phone">
